--- a/apps/admin/src/assets/styles/main.scss
+++ b/apps/admin/src/assets/styles/main.scss
@@ -7,7 +7,8 @@
 @use "layout/sidebar";
 @use "layout/admin-layout";
 @use "layout/topbar";
+@use "layout/login";
 @use "components/button";
 @use "pages/dashboard";
-@use "pages/login";
+
 @use "components/toast";
